Buttons not aligned bug

--- a/Login Screen/css/login-form.css
+++ b/Login Screen/css/login-form.css
@@ -15,6 +15,7 @@
 	display:flex;
 	flex-direction:column;
 	row-gap: 10px;
+	align-items: center;
 }
 
 #image-profile-parent {
